New combined version, ready for customizable front end development

--- a/theunknowncollectivedevelopment-myshopify-com-t/snippets/product-customizable.liquid
+++ b/theunknowncollectivedevelopment-myshopify-com-t/snippets/product-customizable.liquid
@@ -1,17 +1,86 @@
+{% comment %} Dylan: This is our copied class to display customizations on customizable products  {% endcomment %}
+
+{% comment %} Dara:  help overlay feature {% endcomment %}
+    <head>
+      <style>
+        div#overlay {
+          display: none;
+          z-index: 20;
+          background-color: black;
+          background: rgba(25, 25, 25, .5);
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          top: 0px;
+          left: 0px;
+          text-align: center;
+        }
+        div#specialBox {
+          display: block;
+          position: relative;
+          z-index: 11;
+          top:100px;
+          background-color: white;
+          margin: 120px auto 0px auto;
+          max-width: 750px; 
+          max-height: 620px;
+          overflow:scroll;
+        }
+      </style>
+      {% comment %} END of sheet for the objects of the Help Overlay {% endcomment %}
+        
+      {% comment %} START of actual Help Overlay function {% endcomment %}  
+      <script type="text/javascript">
+      function toggleOverlay(){
+          var overlay = document.getElementById('overlay');
+          
+          if(overlay.style.display == "block"){
+              overlay.style.display = "none";
+          } else {
+              overlay.style.display = "block";
+          }
+      }
+      </script>
+    </head>
+{% comment %} Dara:   {% endcomment %}
+
+
 <div itemscope itemtype="http://schema.org/Product">
     <meta itemprop="url" content="{{ shop.url }}{{ product.url }}" />
     <meta itemprop="image" content="{{ product.featured_image.src | product_img_url: 'grande' }}" />
     <meta itemprop="priceCurrency" content="{{ shop.currency }}" />
     <meta itemprop="price" content="{{ product.price | money_without_currency | strip_html }}" />
+  
+
+  {% comment %} Dylan: test here  {% endcomment %}
+  
+  	A CHANGE TO TEST this is a customizable product page (seperate from regular product pages)!!!
+  
+  {% comment %} Dylan: test here  {% endcomment %}
+  
+  {% comment %} Dara: START of Help button for toggle the Help Overlay{% endcomment %}  
+  
+    	<button onmousedown="toggleOverlay()" style="position: absolute; right: 10px;">Help</button>
+  
+  {% comment %} END of Help button for toggle the Help Overlay{% endcomment %} 
+  
+  {% comment %} Dara: START of Help Overlay within the page {% endcomment %}  
+  
+    	<div id="overlay">
+          	<button onmousedown="toggleOverlay()" style="position: fixed; top: 120px; right:5px;">Close</button>
+  			<div id="specialBox">
+               
+              <br/>
+  			</div>
+		</div>
+  
+	{% comment %} END of Help Overlay within the page {% endcomment %} 
+
+  
     {% if product.available %}
-    <link itemprop="availability" href="http://schema.org/InStock" />
-  
-   <!--  DYLAN code here   -->
-  {% include 'product_customizer_items' %}
-   <!--  DYLAN code here   -->
-  
+    	<link itemprop="availability" href="http://schema.org/InStock" />
     {% else %}
-    <link itemprop="availability" href="http://schema.org/OutOfStock" />
+    	<link itemprop="availability" href="http://schema.org/OutOfStock" />
     {% endif %}
     
     {% capture tag_html %}
@@ -64,10 +133,13 @@
         GALLERY, TITLE, DESCRIPTION IS ALL IN product-detail.liquid
         It is included here on the product page, and also used in the slide-down feature on the collection page
     {% endcomment %}
+
+  
     <div id="main-product-detail" class="product-detail spaced-row container cf">
         {% assign product_detail_in_block = false %}
         {% include 'product-detail' with product %}
     </div><!-- /.product-detail -->
+ 
     
     {% assign show_related = false %}
     {% capture related_markup %}
@@ -128,6 +200,7 @@
                 </script>
                 <script>
                 //Load in related products via ajax
+                  
                 $(function(){
                     Shopify.money_format = {{ shop.money_format | json }};
                     var related_tags = {{ product.tags | json }};
@@ -162,6 +235,7 @@
                         }
                     }
                 });
+                  
                 </script>
             {% endif %}
         </div>
