--- a/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-customizable.liquid
+++ b/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-customizable.liquid
@@ -1,6 +1,74 @@
 {% paginate collection.products by settings.coll_num_per_page %}
 
+{% comment %} Dara START of sheet for the objects of the Help Overlay {% endcomment %}
+
+<head>
+  
+  
+      <style>
+        div#overlay {
+          display: none;
+          z-index: 20;
+          background-color: black;
+          background: rgba(25, 25, 25, .5);
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          top: 0px;
+          left: 0px;
+          text-align: center;
+        }
+        div#specialBox {
+          display: block;
+          position: relative;
+          z-index: 11;
+          top:100px;
+          background-color: white;
+          margin: 120px auto 0px auto;
+          max-width: 750px; 
+          max-height: 620px;
+          overflow:scroll;
+        }
+      </style>
+      {% comment %} END of sheet for the objects of the Help Overlay {% endcomment %}
+        
+      {% comment %} START of actual Help Overlay function {% endcomment %}  
+      <script type="text/javascript">
+      function toggleOverlay(){
+          var overlay = document.getElementById('overlay');
+          
+          if(overlay.style.display == "block"){
+              overlay.style.display = "none";
+          } else {
+              overlay.style.display = "block";
+          }
+      }
+      </script>
+</head>
+{% comment %} END of sheet for the objects of the Help Overlay {% endcomment %}
+
+
+{% comment %} DARA: START of Help Overlay within the page {% endcomment %}
+
+    	<div id="overlay">
+          	<button onmousedown="toggleOverlay()" style="position: fixed; top: 120px; right:5px;">Close</button>
+  			<div id="specialBox">
+               
+              <br/>
+  			</div>
+		</div>
+{% comment %} END of Help Overlay within the page {% endcomment %} 
+
 <div class="container">
+  
+{% comment %} START of Help button for toggle the Help Overlay{% endcomment %}  
+  
+    <button onmousedown="toggleOverlay()" style="position: absolute; right: 10px;">Help</button>
+  
+{% comment %} END of Help button for toggle the Help Overlay{% endcomment %}
+  
+  A CHANGE for Customizable collections!!!
+  
     <div class="page-header cf">
         {% if settings.coll_desc_pos == 'below' %}
             <h1 class="majortitle">{{ collection.title | escape }}</h1>
@@ -42,7 +110,11 @@
                     <a href="#" class="tags" data-toggle-target=".tags.nav-row.cat-{{ cat | handleize }}">{{ cat }} <span class="state">+</span></a>
                 {% endunless %}
             {% endfor %}
+          
+          
             
+          {% comment %} DYLAN
+          
             {% if settings.coll_gridstream_mode contains 'both' %}
           	  <span class="view-as">
                 <span class="view-as-label">View</span>
@@ -50,11 +122,20 @@
                 <a id="view-as-stream" {% if settings.coll_gridstream_mode contains 'stream' %}class="active"{% endif %} href="#">Stream <div class="fluff"></div></a>
 	          </span>
             {% endif %}
+          
+          {% endcomment %}
+          
+          
         </div><!-- /.filters -->
         
+      
+      {% comment %} DYLAN
+      
         <div class="social-area">
             <a href="#" class="tags" data-toggle-target=".tags.nav-row.social">{{ settings.text_share }} <span class="state">+</span></a>
         </div>
+      
+      {% endcomment %}
         
     </div><!-- /.page-header -->
 </div><!-- /.container -->
@@ -126,7 +207,7 @@
     {% if settings.coll_in_col %}<div class="container">{% endif %}
     
     <div class="collection-listing{% if settings.coll_gridstream_mode contains 'stream' %}-stream{% endif %} cf">
-        {% include 'product-list' with collection %}
+      {% include 'product-list' with collection %} 
     </div>
     
     {% if settings.coll_in_col %}</div>{% endif %}
