Added a new page to add customizations to

--- a/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-customizable.liquid
+++ b/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-customizable.liquid
@@ -57,17 +57,19 @@
               <br/>
   			</div>
 		</div>
-{% comment %} END of Help Overlay within the page {% endcomment %} 
+{% comment %} DARA: END of Help Overlay within the page {% endcomment %} 
 
 <div class="container">
   
-{% comment %} START of Help button for toggle the Help Overlay{% endcomment %}  
+  {% comment %} Dara: START of Help button for toggle the Help Overlay{% endcomment %}  
   
     <button onmousedown="toggleOverlay()" style="position: absolute; right: 10px;">Help</button>
   
-{% comment %} END of Help button for toggle the Help Overlay{% endcomment %}
   
-  A CHANGE for Customizable collections!!!
+  
+  {% comment %} Dara: END of Help button for toggle the Help Overlay{% endcomment %}
+  
+
   
     <div class="page-header cf">
         {% if settings.coll_desc_pos == 'below' %}
