as at 7/5/15. Displaying materials etc

--- a/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-block.liquid
+++ b/theunknowncollectivedevelopment-myshopify-com-t/snippets/collection-block.liquid
@@ -14,7 +14,7 @@
             <a class="more-info" href="{{ collection.url }}">
                 <span class="productlabel general">
                     <span>
-                        <span clas="title">{{ collection.title }}</span>
+                      <span class="title">{{ collection.title }}</span> {% comment %} I fixed code in this line "clas= to: class="{% endcomment %}
                         <span class="count">{{ collection.all_products_count }} products</span>
                     </span>
                 </span>
